chore: add sections for settings; fixed image alignment in table

--- a/website/static/css/custom.css
+++ b/website/static/css/custom.css
@@ -73,3 +73,13 @@
   vertical-align: middle;
   margin-top: -4px;
 }
+
+.status-table td:first-child {
+  text-align: center;
+  padding-bottom: 6px;
+  width: 20px;
+}
+
+.status-table td img {
+  vertical-align: middle;
+}
